[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/entity/entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/entity/ennemi.gd" type="Script" id=2]
[ext_resource path="res://scenes/entity/chauvesouris.tres" type="SpriteFrames" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="CircleShape2D" id=3]
radius = 50.0

[node name="ennemi" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="sprite" parent="." index="2"]
scale = Vector2( 1, 1 )
frames = ExtResource( 3 )
animation = "Idle"
frame = 1
playing = true

[node name="detection" type="Area2D" parent="." index="5"]

[node name="collision_shape_2d" type="CollisionShape2D" parent="detection" index="0"]
shape = SubResource( 2 )

[node name="atk" type="Area2D" parent="." index="6"]

[node name="collision_shape_2d" type="CollisionShape2D" parent="atk" index="0"]
shape = SubResource( 3 )
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="atk" to="." method="_on_atk_body_entered"]
[connection signal="body_exited" from="atk" to="." method="_on_atk_body_exited"]
